<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">A 4 D</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Add_record">Add new report</string>
    <string name="view_reports">View Reports</string>
    <string name="select_date">Select Date</string>
    <string name="ptval1">PT (P) value</string>
    <string name="ptval2">PT (C) value</string>
    <string name="inrval">INR value</string>
    <string name="save">Save</string>
     <string name="NoData">No Values Stored</string>
    <string name="cleartxt">Clear</string>

</resources>
